--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,19 @@
 *.exe
 *.out
 *.app
+
+# Visual Studio files
+.vs/
+x64/
+*.ilk
+*.ipch
+*.pdb
+*.db
+*.obj
+*.log
+*.tlog
+*.suo
+*.user
+*.ipdb
+*.opendb
+*.iobj
